:lipstick: fix the gap and padding

--- a/src/components/slider/index.scss
+++ b/src/components/slider/index.scss
@@ -4,6 +4,8 @@
 width: 35rem;
 display: flex;
 flex-direction: column;
+gap: 32px;
+padding: 32px;
 }
 
 .container-top-slider {
